Sat Jun 23 16:01:00 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added preliminary support for native WIN32 compilation under
	  cygwin (using the -mno-cygwin option for GCC) to the
	  ./configure.in.pre.  The --with-win32 now prepares the
	  compilation for native WIN32.

	* Rewrote the SILC Scheduler interface in the file
	  lib/silcutil/silcschedule.h.  The scheduler is now context
	  based and does not have anymore any global static scheduler.
	  Moved the Unix scheduler to the lib/silcutil/unix/ directory
	  and created lib/silcutil/win32 directory for WIN32 based
	  scheduler.

	* Added Unix specific network routines to the
	  lib/silcutil/unix/silcunixnet.c and the old
	  lib/silcutil/silcnet.c includes now only generic routines.

	  Added WIN32 specific network routines to the
	  lib/silcutil/win32/silcwin32net.c.

	* Added Unix specific utility functions from the
	  lib/silcutil/silcutil.c to lib/silcutil/unix/silcunixutil.c.

	* Added WIN32 SILC Scheduler to the file
	  lib/silcutil/win32/silcwin32schedule.c. The code is of course
          untested.

Fri Jun 22 10:44:14 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not handle JOIN notify in the server if the target client
	  is not registered (idata->registered == FALSE).  The affected
	  file is silcd/packet_receive.c.

	* Update the nickrec->founder in event_cumode in the Irssi SILC
	  client.  Affected file irssi/src/silc/core/silc-channels.c.

	* Fixed the CUMODE_CHANGE notify handling in the server when
	  server and router are announcing their clients on channels.
	  Now the mode changes are saved and notified correctly.  The
	  affected file is /silcd/packet_receive.c.

	* Fixed silc_idlit_replace_[server/client/channel]_id functions.
	  They really did not replace the cache entry in the ID Cache.
	  Now they do that.  Affected file silcd/idlist.c.

	* Fixed the KICK notify handling in the Irssi SILC client to
	  update the channel records so that the kicked client does not